--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,12 +10,14 @@ book:
   chapters:
     - index.qmd
     - 01_R语言入门.qmd
-    - 02_向量及其运算.qmd
-    - 03_matrix.qmd
-    - 04_函数及程序流程控制.qmd
-    - 05_数据导入导出.qmd
-    - 06_数据可视化.qmd
-    - 07_代码优化及并行.qmd
+    - 02_如何解题.qmd
+    - 03_代码及其他.qmd
+    - 04_向量及其运算.qmd
+    - 05_matrix.qmd
+    - 06_函数及程序流程控制.qmd
+    - 07_数据导入导出.qmd
+    - 08_数据可视化.qmd
+    - 09_代码优化及并行.qmd
     - references.qmd
   cover-image: cover.png
 
