update：正在写作第三章代码 & 脚本 & 项目

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,6 +19,7 @@ book:
     - 08_数据可视化.qmd
     - 09_代码优化及并行.qmd
     - references.qmd
+    - version.qmd
   cover-image: cover.png
 
 bibliography: references.bib
