--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,6 +5,8 @@ project:
     port: 1996
     browser: false
 
+lang: zh
+
 book:
   title: "R语言入门"
   author: "金太阳无敌"
@@ -23,15 +25,23 @@ book:
     - 09_代码优化及并行.qmd
     - references.qmd
     - version.qmd
-  cover-image: cover.png
+  cover-image: ./out/cover.png
 
 bibliography: references.bib
 
 format:
   html:
-    theme: cosmo
+    theme: 
+      - cosmo
+      - rn4e.scss
+    grid:
+      sidebar-width: 375px
+    number-sections: true
+    highlight-style: a11y
+    html-math-method: mathjax
+    toc: true
+    toc-depth: 3
+    link-external-newwindow: true
+    code-annotations: hover
   pdf:
     documentclass: scrreprt
-
-
-
